--- a/Index.html
+++ b/Index.html
@@ -5,5 +5,5 @@
 </style>
 
 <canvas></canvas>
-<script src="Data/collisions.js"></script>
+<script src="data/collisions.js"></script>
 <script src="index.js"></script>
